# fastapi_react

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/versions/: 55de9448f8ec_atualizando_tabelas_produto_e_fornecedor.py  5de5aa96196e_atualizando_campo_da_tabela_produto.py  efc27b830671_criando_tabelas_produto_e_fornecedor.py
src/: models.py  schemas.py
src/routes/: fornecedores.py  produtos.py
